Add repositories for services